--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <input type="number" value="2" disabled>
     =
     <input type="number" id='idOutput' disabled>
-    <button onclick="fn_double_it_up(document.getElementById('idInput').value)">Double it!</button>
+    <button onclick="arrow_fn_double_it_up(document.getElementById('idInput').value)">Double it!</button>
     <script src="./assets/js/main.js"></script>
 </body>
 
